# python-can-j1939

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  README.rst  conftest.py  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
.github/workflows/: CI.yml  publish.yml
docs/: conf.py  index.rst  requirements.txt
examples/: diagnostic_message.py  j1939_22_multi_pg.py  j1939_22_transport_protocols.py  own_ca_producer.py  simple_receive_global.py  simple_receive_peer_to_peer.py
examples/j1939_21_cmdt_send_receive/: j1939_receive.py  j1939_send.py
j1939/: Dm14Query.py  Dm14Server.py  controller_application.py  diagnostic_messages.py  electronic_control_unit.py  j1939_21.py  j1939_22.py  memory_access.py
test/: conftest.py  test_ca.py  test_dtc_conversion_methods.py  test_ecu.py  test_j1939_22.py  test_memory_access.py  test_threading.py
test/helpers/: feeder.py
test_helpers/: conftest.py  feeder.py
