[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-can-j1939"
dynamic = ["version"]
description = "SAE J1939 stack implementation (fork of can-j1939 by Juergen Heilgemeir)"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
authors = [
    { name = "Raul Sainz-Maza"},
    { name = "Drew Rife" },
    { name = "Grant Allan" },
    { name = "Koltan Hauersperger" },
    { name = "Mahesh Sharma" },
    { name = "Todd Snider" },
    { name = "Victor Klueber" },
]
maintainers = [
    { name = "Raul Sainz-Maza"},
]
keywords = ["CAN", "SAE", "J1939", "J1939-FD", "J1939-22"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "python-can >= 4.2.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 6.2.5",
]

[project.urls]
Homepage = "https://github.com/RaulSMS/python-can-j1939"
"Bug Tracker" = "https://github.com/RaulSMS/python-can-j1939/issues"
Documentation = "https://j1939.readthedocs.io/en/stable/"

[tool.setuptools.dynamic]
version = { attr = "j1939.version.__version__" }

[tool.setuptools.packages.find]
exclude = ["docs*", "examples*", "test*"]
